--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,31 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <style>
+    #popularSongs, #hiddenSongs {
+      width: 40%;
+      margin: 4%;
+      border: 1px #78ffee solid;
+    }
+
+    #popularSongs h2, #hiddenSongs h2 {
+      text-align: center;
+      background-image: linear-gradient(to right, transparent, #78ffee, transparent);
+    }
+
+    #popularSongs {
+      float: left;
+    }
+
+    #hiddenSongs {
+      float: right;
+    }
+
+    h1 {
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body>
@@ -23,12 +48,20 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <h1>Hidden Sounds Unofficial (Fan) Website</h1>
+  <div id="popularSongs">
+    <h2>Popular Songs</h2>
+  </div>
+  <div id="hiddenSongs">
+    <h2>Hidden Songs</h2>
+  </div>
+  <!--
   <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
   <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js" integrity="{{JQUERY_SRI_HASH}}" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  -->
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
