Using Jekyll, bg, songs, artists

--- a/index.html
+++ b/index.html
@@ -1,83 +1,33 @@
-<!doctype html>
-<html class="no-js" lang="">
-
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="manifest" href="src/site.webmanifest">
-  <link rel="apple-touch-icon" href="src/icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
-
-  <style>
-    #popularSongs, #hiddenSongs {
-      width: 40%;
-      margin: 4%;
-      border: 1px #78ffee solid;
-    }
-
-    #popularSongs h2, #hiddenSongs h2 {
-      text-align: center;
-      color: aqua;
-    }
-
-    #popularSongs {
-      float: left;
-    }
-
-    #hiddenSongs {
-      float: right;
-    }
-
-    h1 {
-      text-align: center;
-      color: aqua;
-    }
-  </style>
-</head>
-
-<body>
-<div class="bg-image"></div>
-  <!--[if IE]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
-
-  <!-- Add your site or application content here -->
-  <h1>Hidden Sounds Unofficial (Fan) Website</h1>
-  <div id="popularSongs">
+---
+layout: default
+title: Hidden Sounds
+---
+<h1>Hidden Sounds Unofficial (Fan) Website</h1>
+<div id="popularSongs">
     <h2>Popular Songs</h2>
     <div id="popularContainer">
-      <div class="song">
-        <p><a href="https://spotify.com/">Artist - Title</a></p>
-      </div>
+        {% for song in site.data.songs %}
+        <div class="song">
+            <p>
+                {% assign artist = site.artists | where: 'name', song.artist | first %}
+                {% if artist %}
+                <a href="{{ artist.url }}">{{ artist.name }}</a>
+                {% else %}
+                {{ song.artist }}
+                {% endif %}
+                - <a href="https://spotify.com/">{{ song.title }}</a>
+            </p>
+        </div>
+        {% endfor %}
     </div>
-  </div>
-  <div id="hiddenSongs">
+</div>
+<div id="hiddenSongs">
     <h2>Hidden Songs</h2>
     <div id="hiddenContainer">
-
+        {% for song in site.data.songs %}
+        <div class="song">
+            <p><a href="https://spotify.com/">Artist - Title</a></p>
+        </div>
+        {% endfor %}
     </div>
-  </div>
-  <!--
-  <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
-  <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js" integrity="{{JQUERY_SRI_HASH}}" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-  -->
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
-</body>
-
-</html>
+</div>
