--- a/streams.html
+++ b/streams.html
@@ -2,27 +2,45 @@
 title: Streams
 ptitle: Streams
 ---
-
-<ul>
-{% assign streams = site.data.streams | reverse %}
-{% for stream in streams %}
-    <li>
-        <h2>
-            {%- if stream.host == '!Chill' -%}        Tuesday Chill Stream
-            {%- elsif stream.host == '!Throwback' -%}  Throwback: {{ stream.throwbackHost }}
-            {%- elsif stream.host == '!Roundup' -%}    Monthly Roundup
-            {%- else -%}                              {{- stream.host -}}
-            {%- endif -%}
-            {% if stream.live %} - LIVE {%- endif -%}
-        </h2>
-    </li>
-    <li>
-        {{ stream.date | date: "%a, %b %d, %Y" }}
-    </li>
-    {%- if stream.streamer -%} {% comment %} No streamer for future streams {% endcomment %}
-    <li>
-        Streamer: {{ stream.streamer }}
-    </li>
-    {%- endif -%}
-{% endfor %}
-</ul>
+{% assign streamx = site.data.streams | reverse %}
+<div class="stream-row">
+    <div class="stream-column">
+        <h2>Tuesday</h2>
+        <ul>
+            {% assign streamm = streamx | where: "host", "!Chill" | where: "live", nil %}
+            {% for stream in streamm %}
+                {% include streamlist.html stream=stream %}
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="stream-column">
+        <h2>Thursday</h2>
+        <ul>
+            {% assign streamm = streamx | where: "live", nil %}
+            {% for stream in streamm %}
+                {% comment %}
+                    {% assign day = stream.date | date: "%w" %}
+                    {% if day == "4" %}
+                        {% include streamlist.html stream=stream %}
+                    {% endif %}
+                {% endcomment %}
+                {% assign x = stream.host | slice: 0 %}
+                {% if stream.live == nil and x != '!' %}
+                    {% include streamlist.html stream=stream %}
+                {% endif %}
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="stream-column">
+        <h2>Special</h2>
+        <ul>
+            {% assign streamm = streamx %}
+            {% for stream in streamm %}
+                {% assign x = stream.host | slice: 0 %}
+                {% if stream.live or x == '!' and stream.host != "!Chill" %}
+                    {% include streamlist.html stream=stream %}
+                {% endif %}
+            {% endfor %}
+        </ul>
+    </div>
+</div>
