--- a/streams.html
+++ b/streams.html
@@ -5,7 +5,7 @@ ptitle: Streams
 {% assign streamx = site.data.streams | reverse %}
 <div class="stream-row">
     <div class="stream-column">
-        <h2>Tuesday</h2>
+        <h2>Tuesday Chill</h2>
         <ul>
             {% assign streamm = streamx | where: "host", "!Chill" | where: "live", nil %}
             {% for stream in streamm %}
@@ -14,7 +14,7 @@ ptitle: Streams
         </ul>
     </div>
     <div class="stream-column">
-        <h2>Thursday</h2>
+        <h2>Hosted Thursday</h2>
         <ul>
             {% assign streamm = streamx | where: "live", nil %}
             {% for stream in streamm %}
